# baram-kbd-tester

./: .gitignore  README.md
firmware/baram-kbd-log/: CMakeLists.txt
firmware/baram-kbd-log/src/ap/: ap.c
firmware/baram-kbd-log/src/bsp/: bsp.c
firmware/baram-kbd-log/src/bsp/device/: stm32u5xx_hal_conf.h
firmware/baram-kbd-log/src/common/hw/include/: uart.h
firmware/baram-kbd-log/src/hw/driver/: led.c  uart.c
firmware/baram-kbd-log/src/hw/driver/usbh/: usbh.h
firmware/baram-kbd-log/src/hw/driver/usbh/usbh_hid/: usbh_hid.c  usbh_hid.h
firmware/baram-kbd-tester/: CMakeLists.txt
firmware/baram-kbd-tester/src/ap/: ap.c  ap.cpp
firmware/baram-kbd-tester/src/ap/modules/key_test/: key_test.c  key_test.h
firmware/baram-kbd-tester/src/bsp/: bsp.c
firmware/baram-kbd-tester/src/bsp/device/: stm32u5xx_hal_conf.h
firmware/baram-kbd-tester/src/hw/: hw.c  hw.h  hw_def.h
firmware/baram-kbd-tester/src/hw/driver/: button.c  gpio.c  lcd.c  reset.c  uart.c
firmware/baram-kbd-tester/src/hw/driver/usbh/: tusb_config.h  usbh.c  usbh.h  usbh_conf.c  usbh_conf.h
firmware/baram-kbd-tester/src/hw/driver/usbh/usbh_hid/: usbh_hid.c  usbh_hid.h  usbh_hid_keybd.c
firmware/stm32cube/: .cproject.bak  .mxproject  .project.bak  stm32cube.ioc
firmware/stm32cube/Core/Inc/: gpdma.h  main.h  pssi.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  usb_otg.h
firmware/stm32cube/Core/Src/: gpdma.c  gpio.c  i2c.c  main.c  pssi.c  rtc.c  spi.c  stm32u5xx_it.c  usart.c  usb_otg.c
